fix: input alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -122,6 +122,10 @@ input {
   text-align: right;
 }
 
+.seconds {
+  text-align: left;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
